# cmsis-core-nuc472

./: module.json
cmsis-core-nuc472/: NUC472_442.h  cmsis.h
cmsis-core-nuc472/StdDriver/: clk.h  pwm.h  sys.h
source/: CMakeLists.txt  mbed_overrides.c  startup_NUC472_442.c  system_NUC472_442.c
source/ARM/: startup_NUC472_442.s
source/GCC/: startup_NUC472_442.S
source/IAR/: startup_NUC472_442.s
source/StdDriver/: pwm.c  sd.c  usbd.c
